# zeta

./: .gitignore  LICENSE  README.md  pyproject.toml  zeta.py  zeta_cli.py  zeta_prg.py
tests/: test_cli.py  test_core_math.py
zeta/: __init__.py  core.py  standards.py
zeta/cli/: cli.py
